[package]
name = "dxlib-ffi"
version = "0.1.2"
authors = ["tanukimaru0090 <tanukimaru0090.gmail.com>"]

repository = "https://github.com/tanukimaru0090/dxlib-ffi.git"
build="build.rs"

readme = "README.md"

license = "MIT"


[lib]
name="dxlib_ffi"
path="src/lib.rs"

[dependencies]
c-encode = { git = "https://github.com/tanukimaru0090/c-encode-rs", version = "0.1.0" }
encoding_rs = "0.8.32"
windows = "0.51.1"

